added dashboard js

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,15 +8,15 @@
   <div class="col-md-6">
     <h3>Create a New Post</h3>
 
-    <form class="form new-project-form">
+    <form class="form new-post-form">
       <div class="form-group">
-        <label for="project-name">title:</label>
-        <input class="form-input" type="text" id="project-name" name="project-title" />
+        <label for="title-name">title:</label>
+        <input class="form-input" type="text" id="blog-title" name="blog-title" />
       </div>
   
       <div class="form-group">
-        <label for="project-desc">content:</label>
-        <textarea class="form-input" id="project-desc" name="project-content"></textarea>
+        <label for="content">content:</label>
+        <textarea class="form-input" id="content" name="blog-content"></textarea>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Create</button>
