--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
     {{else}}
     <a href="/login">Login</a>
     {{/if}}
-     <a href="/">Dashboard</a>
+     <a href="/dashboard">Dashboard</a>
   </nav>
 
 
