rendered posts in dashboard

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
-<div class="post">
+{{!-- <div class="post">
 
   {{#each posts as |post| }}
   {{> post-info post}}
   {{/each}}
 
-</div>
+</div> --}}
