--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -30,10 +30,10 @@
     {{#each posts as |post|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a href="/api/post/{{post.id}}">{{post.title}}{{post.content}}</a></h4>
+        <h4><a href="/api/post/{{post.id}}">{{post.title}}</a></h4>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-sm btn-danger post-list" data-id="{{project.id}}">DELETE</button>
+        <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
       </div>
     </div>
     {{/each}}
