--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,21 @@
-{{!-- <div class="post">
+<!-- Loop over each object in the posts array -->
+{{!--html to show all the posts being looped --}}
 
-  {{#each posts as |post| }}
-  {{> post-info post}}
-  {{/each}}
-
-</div> --}}
+{{#each posts as |post| }}
+<div class="row mb-4 project">
+  <div class="col-md-5">
+    <h2>
+      {{!-- <!-- Call helper function with triple brackets to render the emoji span as HTML -->
+      {{{get_emoji}}}
+      <a href="/project/{{post.id}}">{{post.content}}</a>
+    </h2>
+    <p>
+      <span for="img" aria-label="money">💲</span>
+      <!-- Pass needed_funding value to the helper function -->
+      <span class="dollar-amount">{{format_amount project.needed_funding}}</span>
+      needed!
+    </p> --}}
+    <p>{{post.title}}: {{post.content}}: {{post.date_created}} {{post.user.username}} </p>
+  </div>
+</div>
+{{/each}}
