--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,10 +3,10 @@
   </div>
 </div>
 
+{{!-- Front end (html) to create a new post --}}
 <div class="row mt-4">
   <div class="col-md-6">
     <h3>Create a New Post</h3>
-
     <form class="form new-post-form">
       <div class="form-group">
         <label for="title-name">title:</label>
@@ -23,10 +23,10 @@
     </form>
   </div>
 
+{{!-- Handlebars to loop through all the posts and retrieve them and be able to delete --}}
   {{#if posts.length}}
   <div class="col-md-6 blog-list">
     <h3>Current Posts:</h3>
-
     {{#each posts as |post|}}
     <div class="row mb-2">
       <div class="col-md-8">
