--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -7,7 +7,7 @@
   <div class="col-md-6">
     <h3>Update Post</h3>
 
-    <form class="form new-post-form">
+    <form class="form updated-post-form">
       <div class="form-group">
         <label for="title-name">title:</label>
         <input class="form-input" type="text" id="blog-title" name="blog-title" value=
